# generational-arena

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
benches/: benches.rs
examples/: ex.rs
src/: dyn_index.rs  ext.rs  lib.rs  prelude.rs  serde_impl.rs  typed_arena.rs  typed_index.rs  typed_index2.rs  typed_iter.rs  typed_iter_mut.rs
tests/: quickchecks.rs  readme.rs  serde.rs  tests.rs
