[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
categories = ["memory-management", "no-std", "rust-patterns", "data-structures"]
description = "A safe arena allocator that supports deletion without suffering from the ABA problem by using generational indices."
keywords = ["generation", "index", "arena", "ecs"]
license = "MPL-2.0"
name = "generational-arena"
readme = "./README.md"
repository = "https://github.com/fitzgen/generational-arena"
version = "0.2.9"
edition = "2018"

# The following notice applies to all the files in this source tree:
#
#     This Source Code Form is subject to the terms of the Mozilla Public
#     License, v. 2.0. If a copy of the MPL was not distributed with this
#     file, You can obtain one at http://mozilla.org/MPL/2.0/.
#
# (If you copy files from this project into another program which is not
# licenced MPL-2.0, you should add that notice to each copied file.)

[dependencies]
cfg-if = "1.0.0"
serde = { version = "1.0.102", optional = true, default-features = false }

[dev-dependencies]
quickcheck = "0.9.0"
criterion = "0.3.0"
serde_test = "1.0.102"
serde_yaml = "0.8.13"
bincode = "1.2.0"
serde = { version = "1.0.102", default-features = false, features = ["derive"] }

[[bench]]
name = "benches"
path = "benches/benches.rs"
harness = false

[features]
default = ["std"]
std = []

[profile.bench]
debug = true
